Fix firefox scrollbar

--- a/src/assets/browser_firefox--userContent.css
+++ b/src/assets/browser_firefox--userContent.css
@@ -1,4 +1,3 @@
-:root,
-body {
+* {
   scrollbar-width: thin;
 }
